objects/Event_Rule__c.object
<CustomObject>
    <fields>
        <fullName>Action__c</fullName>
        <formula>IF(
	Advisory_Event__c ==  Rule__r.Advisory_Event__c,  
	HYPERLINK(&apos;/&apos; +  Rule__r.Id  + &apos;/e?retURL=&apos; +  Advisory_Event__r.Id, &apos;Edit&apos;, &apos;_self&apos;) + &apos; | &apos; + HYPERLINK(&apos;/setup/own/deleteredirect.jsp?id=&apos; + Advisory_Event__r.Id + &apos;&amp;sfdc.override=1&amp;delID=&apos; +  Rule__r.Id  + &apos;&amp;retURL=&apos; + Advisory_Event__r.Id, &apos;Delete&apos;, &apos;_self&apos;),
	HYPERLINK(&apos;/&apos; +  Rule__r.Id  + &apos;/e?retURL=&apos; + Advisory_Event__r.Id, &apos;Edit Master&apos;, &apos;_self&apos;) + &apos; | &apos; + HYPERLINK(&apos;/setup/own/deleteredirect.jsp?id=&apos; + Advisory_Event__r.Id + &apos;&amp;sfdc.override=1&amp;delID=&apos; +  Rule__r.Id  + &apos;&amp;retURL=&apos; + Advisory_Event__r.Id, &apos;Delete&apos;, &apos;_self&apos;)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Action</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Advisory_Event__c</fullName>
        <label>Advisory Event</label>
        <referenceTo>Advisory_Event__c</referenceTo>
        <relationshipLabel>Event Rules</relationshipLabel>
        <relationshipName>Event_Rules</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Membership_Status__c</fullName>
        <formula>TEXT(Rule__r.Membership_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Membership Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rule_Name__c</fullName>
        <formula>HYPERLINK(&apos;/&apos; + Rule__r.Id + &apos;?retURL=&apos; + Advisory_Event__r.Id,  Rule__r.Name, &apos;_self&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rule Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rule__c</fullName>
        <label>Rule</label>
        <referenceTo>Rule__c</referenceTo>
        <relationshipLabel>Event Rules</relationshipLabel>
        <relationshipName>Event_Rules</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Event Rule</label>
    <nameField>
        <displayFormat>MR-{0}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event Rules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>